user profile modified backend changes